# BachelorThesis---A-

./: astar.py  drive_rover.py  experiment_astar.py  experiment_results_friction.xlsx  experiment_results_hill.xlsx  experiment_results_mix.xlsx  friction_map.csv  generate_terrain.py  generate_terrain2.py  good_map_1.world  height_map.csv  path_waypoints.csv  stats.py  stats2.py  test_a.py  thesis_3d.world  thesis_3d_path.world  waypoints.csv
plugin_waypoint/: CMakeLists.txt  WaypointFollower.cpp
